@@ -1,3 +1,8 @@
+2013-03-22  Pedro Vicente  <pvicente@uci.edu>
+
+	* ncbo: nco_var_op_typ() Find operation type on variable, fixed or processed.
+
+
 2013-03-20  Charlie Zender  <zender@uci.edu>
 
 	* ncecat: insert stubs for netCDF4 RECORD_AGGREGATE
